--- elm-format.cabal.orig	2020-04-26 15:36:45.699132162 +1000
+++ elm-format.cabal	2020-04-26 15:35:50.083928503 +1000
@@ -31,6 +31,7 @@
 
 
 library
+    default-language: Haskell2010
 
     ghc-options:
         -O2 -Wall -Wno-name-shadowing
@@ -114,7 +115,7 @@
     build-depends:
         ansi-terminal >= 0.8.2 && < 0.9,
         ansi-wl-pprint >= 0.6.8.2 && < 0.7,
-        base >= 4.12.0.0 && < 5,
+        base >= 4.13.0.0 && < 5,
         binary >= 0.8.7.0 && < 0.9,
         bytestring >= 0.10.8.2 && < 0.11,
         containers >= 0.6.0.1 && < 0.7,
@@ -122,9 +123,9 @@
         filepath >= 1.4.2.1 && < 2,
         free >= 5.1.1 && < 6,
         indents >= 0.3.3 && < 0.4,
-        json >= 0.9.3 && < 0.10,
+        json >= 0.10 && < 0.11,
         mtl >= 2.2.2 && < 3,
-        optparse-applicative >= 0.14.3.0 && < 0.15,
+        optparse-applicative >= 0.15 && < 0.16,
         parsec >= 3.1.13.0 && < 4,
         process >= 1.6.5.0 && < 2,
         split >= 0.2.3.3 && < 0.3,
@@ -132,6 +133,7 @@
 
 
 executable elm-format
+    default-language: Haskell2010
 
     ghc-options:
         -threaded -O2 -Wall -Wno-name-shadowing
@@ -143,11 +145,13 @@
         Main.hs
 
     build-depends:
-        base >= 4.12.0.0 && < 5,
+        base >= 4.13.0.0 && < 5,
         elm-format
 
 
 test-Suite elm-format-tests
+    default-language: Haskell2010
+
     type:
         exitcode-stdio-1.0
 
